dataset1235/2025-2/2318198438/users/1225947802/executions/1897677159_1078076002.log
== RUN (2025-08-21 01:15:08)
-- CODE: 
A= jfgfdjkgjdgjkfdgjksdghfjksdhgjkfsdgj\hdsgjhdighdjghjhahdjfhfdudsah\jsgdfusdgfsgy\
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    A= jfgfdjkgjdgjkfdgjksdghfjksdhgjkfsdgj\hdsgjhdighdjghjhahdjfhfdudsah\jsgdfusdgfsgy\
                                            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    A= jfgfdjkgjdgjkfdgjksdghfjksdhgjkfsdgj\hdsgjhdighdjghjhahdjfhfdudsah\jsgdfusdgfsgy\
                                            ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:15:20)
-- CODE: 
A= jfgfdjkgjdgjkfdgjksdghfjksdhgjkfsdgj\hdsgjhdighdjghjhahdjfhfdudsah\jsgdfusdgfsgy\
print(A)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    A= jfgfdjkgjdgjkfdgjksdghfjksdhgjkfsdgj\hdsgjhdighdjghjhahdjfhfdudsah\jsgdfusdgfsgy\
                                            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    A= jfgfdjkgjdgjkfdgjksdghfjksdhgjkfsdgj\hdsgjhdighdjghjhahdjfhfdudsah\jsgdfusdgfsgy\
                                            ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:15:25)
-- CODE: 
A= jfgfdjkgjdgjkfdgjksdghfjksdhgjkfsdgj\hdsgjhdighdjghjhahdjfhfdudsah\jsgdfusdgfsgy\
print(A)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    A= jfgfdjkgjdgjkfdgjksdghfjksdhgjkfsdgj\hdsgjhdighdjghjhahdjfhfdudsah\jsgdfusdgfsgy\
                                            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    A= jfgfdjkgjdgjkfdgjksdghfjksdhgjkfsdgj\hdsgjhdighdjghjhahdjfhfdudsah\jsgdfusdgfsgy\
                                            ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:15:39)
-- CODE: 
A= jfgfdjkgjdgjkfdgjksdghfjksdhgjkfsdgj\hdsgjhdighdjghjhahdjfhfdudsah\jsgdfusdgfsgy\
print("A")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    A= jfgfdjkgjdgjkfdgjksdghfjksdhgjkfsdgj\hdsgjhdighdjghjhahdjfhfdudsah\jsgdfusdgfsgy\
                                            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    A= jfgfdjkgjdgjkfdgjksdghfjksdhgjkfsdgj\hdsgjhdighdjghjhahdjfhfdudsah\jsgdfusdgfsgy\
                                            ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:15:38)
-- CODE: 
A= jfgfdjkgjdgjkfdgjksdghfjksdhgjkfsdgj\hdsgjhdighdjghjhahdjfhfdudsah\jsgdfusdgfsgy\
print("A")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    A= jfgfdjkgjdgjkfdgjksdghfjksdhgjkfsdgj\hdsgjhdighdjghjhahdjfhfdudsah\jsgdfusdgfsgy\
                                            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    A= jfgfdjkgjdgjkfdgjksdghfjksdhgjkfsdgj\hdsgjhdighdjghjhahdjfhfdudsah\jsgdfusdgfsgy\
                                            ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:15:19)
-- CODE: 
A= jfgfdjkgjdgjkfdgjksdghfjksdhgjkfsdgj\hdsgjhdighdjghjhahdjfhfdudsah\jsgdfusdgfsgy\
print(A)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    A= jfgfdjkgjdgjkfdgjksdghfjksdhgjkfsdgj\hdsgjhdighdjghjhahdjfhfdudsah\jsgdfusdgfsgy\
                                            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    A= jfgfdjkgjdgjkfdgjksdghfjksdhgjkfsdgj\hdsgjhdighdjghjhahdjfhfdudsah\jsgdfusdgfsgy\
                                            ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
